fixed affected hover box from overflow in task list

--- a/css/style-backlog.css
+++ b/css/style-backlog.css
@@ -304,3 +304,7 @@
         filter: invert(50%);
         cursor: pointer;
     }
+
+    .userHoverBox {
+        margin-right: 5px;
+    }
