--- a/css/style-board.css
+++ b/css/style-board.css
@@ -26,7 +26,7 @@
     justify-content: center;
     padding-bottom: 150px;
     height: 100vh;
-    overflow-y: auto;
+    /* overflow-y: auto;  We cannot use this because otherwise the hoverbox is also partially hidden*/
 }
 
 .section-main {
